--- a/client/src/components/BackgroundImage/background.scss
+++ b/client/src/components/BackgroundImage/background.scss
@@ -1,19 +1,42 @@
 @import '../../../global/global.scss';
 
-.background {
-    background: url('../../../public//background6.jpg');
-    padding: 120px 0;
-    background-size: cover;
-    background-attachment: fixed;
-    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.7);
-}
+    .background-headers {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        background: url('../../../public//background6.jpg');
+        padding: 120px 0;
+        background-size: cover;
+        background-attachment: fixed;
+        box-shadow: inset 0 0 0 1000px rgba(0,0,0,.7);
+    }
+
+    .contact-smaller-header {
+        display: flex;
+        padding-bottom: 1em;
+
+        h3 {
+            display: flex;
+            justify-content: center;
+            color: #fff;
+            font-family: cursive;
+        }
+    }
+
+    .contact-header {
+        display: flex;
+
+        h1 {
+            display: flex;
+            justify-content: center;
+            font-size: 2em;
+            color: #fff;
+            font-family: 'Roboto', sans-serif;
+        }
+    }
 
 //mobile
 @media only screen and (max-width: 425px) {
-    .background {
-        visibility: hidden;
-        display: none;
-    }
 }
 
 //tablets
