--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -62,7 +62,7 @@
         .wrapper-child {
             position: relative;
             top: -2.1em;
-            font-size: 185px;
+            font-size: 150px;
             font-family: 'Stronger', sans-serif;
             color: #383131;
             display: flex;
@@ -92,6 +92,7 @@
 //phones
 @media only screen and (max-width: 425px) {
     .slider {
+        height: auto;
 
         .wrapper {
             height: 0;
