--- a/client/src/components/Contact/contact.scss
+++ b/client/src/components/Contact/contact.scss
@@ -9,6 +9,7 @@
         background-size: cover;
         background-attachment: fixed;
         box-shadow: inset 0 0 0 1000px rgba(0,0,0,.7);
+        margin-bottom: 1em;
     }
 
     .contact-smaller-header {
@@ -32,6 +33,31 @@
             font-size: 2em;
             color: #fff;
             font-family: 'Roboto', sans-serif;
+        }
+    }
+
+    .contact-info {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        font-family: 'Montserrat';
+        font-weight: bold;
+        margin-bottom: 1em;
+        line-height: 1.5em;
+
+        .phoneNumber {
+            display: flex;
+            justify-content: center;
+        }
+
+        .email {
+            display: flex;
+            justify-content: center;
+        }
+
+        .from {
+            display: flex;
+            justify-content: center;
         }
     }
 
