--- a/client/src/components/Navigation/navigation.scss
+++ b/client/src/components/Navigation/navigation.scss
@@ -1,7 +1,6 @@
-@import '../../../global/global.scss';
+@import "../../../global/global.scss";
 
-.container
-{
+.container {
   margin: 0 auto;
   padding: 2em;
   text-align: center;
@@ -20,95 +19,90 @@
   }
 }
 
-.container a
-{
-    color: #282828;
-    text-decoration: none;
-    font: 20px Raleway;
-    margin: 0px 10px;
-    padding: 10px 10px;
-    position: relative;
-    z-index: 0;
-    cursor: pointer;
-    font-weight: bold;
+.container a {
+  color: #282828;
+  text-decoration: none;
+  font: 20px Raleway;
+  margin: 0px 10px;
+  padding: 10px 10px;
+  position: relative;
+  z-index: 0;
+  cursor: pointer;
+  font-weight: bold;
 }
-.child
-{
-    background: #fff;
-    opacity: .9;
-    border-bottom: 1px solid #eee;
+.child {
+  background: #fff;
+  opacity: 0.9;
+  border-bottom: 1px solid #eee;
 }
 
-.topBotomBordersOut a:before, .topBotomBordersOut a:after
-{
-    position: absolute;
-    left: 0px;
-    width: 100%;
-    height: 2px;
-    background: black;
-    content: "";
-    opacity: 0;
-    transition: all 0.3s;
-    display: flex;
-    flex-direction: column;
+.topBotomBordersOut a:before,
+.topBotomBordersOut a:after {
+  position: absolute;
+  left: 0px;
+  width: 100%;
+  height: 2px;
+  background: black;
+  content: "";
+  opacity: 0;
+  transition: all 0.3s;
+  display: flex;
+  flex-direction: column;
 }
 
-.topBotomBordersOut a:before
-{
-    top: 0px;
-    transform: translateY(10px);
+.topBotomBordersOut a:before {
+  top: 0px;
+  transform: translateY(10px);
 }
 
-.topBotomBordersOut a:after
-{
-    bottom: 0px;
-    transform: translateY(-10px);
+.topBotomBordersOut a:after {
+  bottom: 0px;
+  transform: translateY(-10px);
 }
 
-.topBotomBordersOut a:hover:before, .topBotomBordersOut a:hover:after
-{
-    opacity: 1;
-    transform: translateY(0px);
-    background: #ad2525;
+.topBotomBordersOut a:hover:before,
+.topBotomBordersOut a:hover:after {
+  opacity: 1;
+  transform: translateY(0px);
+  background: #ad2525;
 }
 
 //phones
 @media only screen and (max-width: 425px) {
-    .container {
-        padding: .8em;
-        position: static;
-    }
-    
-    .container a {
-        font-size: 1.2em;
-        padding: 3px;
-    }
-    
-    .container {
-        ul {
-            display: flex;
-            flex-wrap: wrap;
+  .container {
+    padding: 0.8em;
+    position: static;
+  }
 
-            li {
-                padding: 3px;
-            }
-        }
+  .container a {
+    font-size: 1.2em;
+    padding: 3px;
+  }
+
+  .container {
+    ul {
+      display: flex;
+      flex-wrap: wrap;
+
+      li {
+        padding: 3px;
+      }
     }
+  }
 }
 
 //tablets
 @media only screen and (min-width: 426px) and (max-width: 568px) {
-    .container a {
-        font-size: 13px;
-    }
+  .container a {
+    font-size: 13px;
+  }
 }
 
 @media only screen and (min-width: 569px) and (max-width: 960px) {
-    .container {
-        position: relative;
-    }
+  .container {
+    position: relative;
+  }
 }
 
 @media only screen and (min-width: 961px) {
-
 }
