--- a/client/src/components/Portfolio/portfolio.scss
+++ b/client/src/components/Portfolio/portfolio.scss
@@ -1,42 +1,42 @@
-@import '../../../global/global.scss';
+@import "../../../global/global.scss";
 
 .portfolio-container {
-    background-color: #f7f7f7;
-    
-    .portfolio-header {
-        h1 {
-            font-size: 48px;
-            text-transform: uppercase;
-            letter-spacing: .07em;
-            line-height: 1em;
-            padding-bottom: 22.5px;
-            padding-top: 12px;
-            color: #2c3e50;
-            font-size: 50px;
-            font-family: 'Roboto', sans-serif;
-            font-weight: bold;
-            display: flex;
-            justify-content: center;
-            margin-top: .1em;
-            margin: auto;
-            position: relative;
-        }
+  background-color: #f7f7f7;
+
+  .portfolio-header {
+    h1 {
+      font-size: 48px;
+      text-transform: uppercase;
+      letter-spacing: 0.07em;
+      line-height: 1em;
+      padding-bottom: 22.5px;
+      padding-top: 12px;
+      color: #2c3e50;
+      font-size: 50px;
+      font-family: "Roboto", sans-serif;
+      font-weight: bold;
+      display: flex;
+      justify-content: center;
+      margin-top: 0.1em;
+      margin: auto;
+      position: relative;
     }
+  }
 
-    .view {
-        margin: 10px;
-        float: left;
-        border: 10px solid #fff;
-        overflow: hidden;
-        position: relative;
-        text-align: center;
-        box-shadow: 1px 1px 2px #e6e6e6;
-        cursor: default;
-        width: 13em;
-      }
+  .view {
+    margin: 10px;
+    float: left;
+    border: 10px solid #fff;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    box-shadow: 1px 1px 2px #e6e6e6;
+    cursor: default;
+    width: 13em;
+  }
 
-    .view .mask,
-    .view .content {
+  .view .mask,
+  .view .content {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -47,16 +47,16 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    }
+  }
 
-    .view img {
+  .view img {
     display: block;
     position: relative;
     height: 12em;
     width: auto;
-    }
+  }
 
-    .view h2 {
+  .view h2 {
     text-transform: uppercase;
     color: #fff;
     text-align: center;
@@ -65,20 +65,20 @@
     font-family: Raleway, serif;
     padding: 10px;
     /*background: rgba(0, 0, 0, 0.8);*/
-    margin: 20px 0 0 0
-    }
+    margin: 20px 0 0 0;
+  }
 
-    .view p {
+  .view p {
     font-family: Merriweather, serif;
     font-style: italic;
     font-size: 14px;
     position: relative;
     color: #fff;
     padding: 0px 20px 0px;
-    text-align: center
-    }
+    text-align: center;
+  }
 
-    .view a.info {
+  .view a.info {
     display: inline-block;
     text-decoration: none;
     padding: 7px 14px;
@@ -86,137 +86,136 @@
     color: #fff;
     font-family: Raleway, serif;
     text-transform: uppercase;
-    box-shadow: 0 0 1px #000
-    }
+    box-shadow: 0 0 1px #000;
+  }
 
-    .view a.info:hover {
-    box-shadow: 0 0 5px #000
-    }
+  .view a.info:hover {
+    box-shadow: 0 0 5px #000;
+  }
 
-        .view-tenth img {
-            transform: scaleY(1);
-            transition: all .9s ease-in-out;
-        }
-        
-        .view-tenth .mask {
-            background-color:black;
-            transition: all 0.5s linear;
-            opacity: 0;
-        }
-        
-        .view-tenth h2 {
-            border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-            background: transparent;
-            margin: 20px 40px 0px 40px;
-            transform: scale(0);
-            color: #fff;
-            transition: all 0.5s linear;
-            opacity: 0;
-        }
-        
-        .view-tenth p {
-            color: #fff;
-            opacity: 0;
-            transform: scale(0);
-            transition: all 0.5s linear;
-        }
-        
-        .view-tenth a.info {
-            opacity: 0;
-            transform: scale(0);
-            transition: all 0.5s linear;
-        }
-        
-        .view-tenth:hover img {
-            -webkit-transform: scale(10);
-            transform: scale(10);
-            opacity: 0;
-        }
-        
-        .view-tenth:hover .mask {
-            opacity: .8;
-        }
-        
-        .view-tenth:hover h2,
-        .view-tenth:hover p,
-        .view-tenth:hover a.info {
-            transform: scale(1);
-            opacity: 1;
-        }
+  .view-tenth img {
+    transform: scaleY(1);
+    transition: all 0.9s ease-in-out;
+  }
+
+  .view-tenth .mask {
+    background-color: black;
+    transition: all 0.5s linear;
+    opacity: 0;
+  }
+
+  .view-tenth h2 {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    background: transparent;
+    margin: 20px 40px 0px 40px;
+    transform: scale(0);
+    color: #fff;
+    transition: all 0.5s linear;
+    opacity: 0;
+  }
+
+  .view-tenth p {
+    color: #fff;
+    opacity: 0;
+    transform: scale(0);
+    transition: all 0.5s linear;
+  }
+
+  .view-tenth a.info {
+    opacity: 0;
+    transform: scale(0);
+    transition: all 0.5s linear;
+  }
+
+  .view-tenth:hover img {
+    -webkit-transform: scale(10);
+    transform: scale(10);
+    opacity: 0;
+  }
+
+  .view-tenth:hover .mask {
+    opacity: 0.8;
+  }
+
+  .view-tenth:hover h2,
+  .view-tenth:hover p,
+  .view-tenth:hover a.info {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
 
 //phones
 @media only screen and (max-width: 425px) {
-    .portfolio-grid {
-        flex-direction: column;
+  .portfolio-grid {
+    flex-direction: column;
 
-        .portfolio-grid-item {
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
-            
-            img {
-                display: flex;
-                align-self: center;
-                width: auto;
-                height: 200px;
-            }
-        }
-    }
+    .portfolio-grid-item {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
 
-    .portfolio {
+      img {
         display: flex;
-        flex-direction: column;
-        align-items: center;
+        align-self: center;
+        width: auto;
+        height: 200px;
+      }
     }
+  }
+
+  .portfolio {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 @media only screen and (min-width: 425px) and (max-width: 670px) {
-    .portfolio {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
+  .portfolio {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 
-    .view {
-        align-self: center;
-    }
+  .view {
+    align-self: center;
+  }
 }
 //tablets
 @media only screen and (min-width: 670px) and (max-width: 960px) {
-    .portfolio {
-        display: grid;
-        grid-template-columns: 25% 25% 25% 25%;
-        padding-bottom: 1em;
-        justify-items: center;
+  .portfolio {
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    padding-bottom: 1em;
+    justify-items: center;
 
-        .view {
-            text-align: center;
-            width: 10em;
-            justify-items: center;
+    .view {
+      text-align: center;
+      width: 10em;
+      justify-items: center;
 
-            img {
-                height: 9em;
-                width: auto;
-            }
-        }
+      img {
+        height: 9em;
+        width: auto;
+      }
     }
+  }
 }
 
 //desktops
 @media only screen and (min-width: 961px) {
-    .portfolio-container {
-        padding-left: 3em;
-        padding-right: 3em;
-        padding-bottom: 2em;
-        
-    }
-    .portfolio {
-        display: grid;
-        grid-template-columns: 25% 25% 25% 25%;
-    }
+  .portfolio-container {
+    padding-left: 3em;
+    padding-right: 3em;
+    padding-bottom: 2em;
+  }
+  .portfolio {
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+  }
 
-    .view {
-        justify-self: center;
-        justify-items: center;
-    }
+  .view {
+    justify-self: center;
+    justify-items: center;
+  }
 }
