--- a/client/src/components/Contact/contact.scss
+++ b/client/src/components/Contact/contact.scss
@@ -86,7 +86,7 @@
 
   .information {
     display: grid;
-    grid-template-columns: 33% 33% 33%;
+    grid-template-columns: auto auto auto;
   }
 }
 
@@ -95,7 +95,7 @@
   .information {
     display: grid;
     grid-template-columns: auto auto auto;
-    padding-left: 3em;
-    padding-right: 3em;
+    padding-bottom: 1em;
+    padding-top: 1em;
   }
 }
