--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -1,136 +1,73 @@
 @import "../../../global/global.scss";
 
-@keyframes slider {
-  0% {
-    left: 0;
-    opacity: 0.6;
-  }
+.header_container {
+  background-image: url("../../../public/background1.jpg");
+  height: 100vh;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 
-  20% {
-    left: 0;
-    opacity: 0.6;
-  }
-
-  25% {
-    left: -100%;
-    opacity: 0.6;
-  }
-
-  45% {
-    left: -100%;
-    opacity: 0.6;
-  }
-
-  50% {
-    left: -200%;
-    opacity: 0.6;
-  }
-
-  70% {
-    left: -200%;
-    opacity: 0.6;
-  }
-
-  75% {
-    left: -300%;
-    opacity: 0.6;
-  }
-
-  95% {
-    left: -300%;
-    opacity: 0.6;
-  }
-
-  100% {
-    left: -400%;
-    opacity: 0.6;
-  }
-}
-
-.slider {
-  overflow: hidden;
-  max-width: 100%;
-  height: auto;
-
-  .wrapper {
-    font-size: 50px;
-    text-align: center;
+  .header_heading {
     display: flex;
     justify-content: center;
-    flex-direction: column;
+    color: #e44f59;
 
-    .wrapper-child {
-      position: relative;
-      top: -2.1em;
-      font-size: 150px;
-      font-family: "Stronger", sans-serif;
-      color: #383131;
-      display: flex;
+    h1 {
       justify-content: center;
+      align-items: center;
+      align-self: center;
+      display: flex;
+      font-family: "Stronger", sans-serif;
+      font-size: 6em;
       text-align: center;
+      flex-wrap: wrap;
     }
   }
-}
 
-.slider figure img {
-  width: 20%;
-  float: left;
-  height: 100vh;
-}
+  .header_icons {
+    color: #fff;
+    display: flex;
 
-.slider figure {
-  position: relative;
-  width: 500%;
-  margin: 0;
-  left: 0;
-  text-align: left;
-  font-size: 0;
-  animation: 15s slider infinite;
-  filter: blur(2px);
-}
-
-//phones
-@media only screen and (max-width: 425px) {
-  .slider {
-    height: auto;
-
-    .wrapper {
-      height: 0;
-
-      .wrapper-child {
-        font-size: 3em;
-        top: -2.9em;
-        margin-left: 17px;
+    #github {
+      
+      .class {
+        display: flex;
+        justify-content: flex-end;
       }
+    }
+
+    #linkedin {
+      
     }
   }
 }
 
 //tablets
 @media only screen and (min-width: 426px) and (max-width: 960px) {
-  .slider {
-    height: auto;
+  .header_container {
+    
+    .header_heading {
 
-    .wrapper {
-      height: 0;
-
-      .wrapper-child {
-        margin-left: 17px;
-        top: -2.3em;
+      h1 {
+        font-size: 8em;
       }
     }
   }
 }
 
 @media only screen and (min-width: 961px) {
-  .slider {
-    height: 100vh;
+  .header_container {
+    
+    .header_heading {
 
-    .wrapper {
-      .wrapper-child {
-        margin-left: 17px;
-        top: -2.3em;
-        font-size: 5em;
+      h1 {
+        font-size: 12em;
       }
     }
   }
