--- a/client/src/components/Contact/contact.scss
+++ b/client/src/components/Contact/contact.scss
@@ -96,6 +96,12 @@
     font-family: "Montserrat";
     font-weight: bold;
   }
+
+  .modal-body {
+    textarea {
+      width: 100%;
+    }
+  }
 }
 
 //mobile
