[edit] fixing modal contacts styling

--- a/client/src/components/Contact/contact.scss
+++ b/client/src/components/Contact/contact.scss
@@ -97,6 +97,10 @@
     font-weight: bold;
   }
 
+  .modal-title {
+    text-align: center;
+  }
+
   .modal-body {
     textarea {
       width: 100%;
