--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -84,9 +84,9 @@
     .polaroid img {
       border: 10px solid #fff;
       border-bottom: 45px solid #fff;
-      -webkit-box-shadow: 3px 3px 3px #777;
-      -moz-box-shadow: 3px 3px 3px #777;
-      box-shadow: 3px 3px 3px #777;
+      -webkit-transition: -webkit-transform 0.15s linear;
+      -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
+      -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
       margin-top: 5px;
       width: auto;
       height: 250px;
@@ -176,10 +176,17 @@
   .polaroid img {
     border: 10px solid #fff;
     border-bottom: 45px solid #fff;
-    -webkit-box-shadow: 3px 3px 3px #777;
-    -moz-box-shadow: 3px 3px 3px #777;
-    box-shadow: 3px 3px 3px #777;
+    -webkit-transition: -webkit-transform 0.15s linear;
+    -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
     margin-top: 5px;
+  }
+
+  .polaroid img:hover {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    position: relative;
+    z-index: 5;
   }
 
   .polaroid p {
@@ -252,10 +259,17 @@
   .polaroid img {
     border: 10px solid #fff;
     border-bottom: 45px solid #fff;
-    -webkit-box-shadow: 3px 3px 3px #777;
-    -moz-box-shadow: 3px 3px 3px #777;
-    box-shadow: 3px 3px 3px #777;
+    -webkit-transition: -webkit-transform 0.15s linear;
+    -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
     margin-top: 5px;
+  }
+
+  .polaroid img:hover {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    position: relative;
+    z-index: 5;
   }
 
   .polaroid p {
