[edit] fixing cloudfront

--- a/client/src/components/Contact/contact.scss
+++ b/client/src/components/Contact/contact.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  background: url("../../../public//background6.jpg");
+  background: url("https://d1ytdcprkw2jhh.cloudfront.net/background6.jpg");
   padding: 120px 0;
   background-size: cover;
   background-attachment: fixed;
