--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -1,7 +1,7 @@
 @import "../../../global/global.scss";
 
 .header_container {
-  background-image: url("../../../public/background1.jpg");
+  background-image: url("https://d1ytdcprkw2jhh.cloudfront.net/background1.jpg");
   height: 100vh;
   background-attachment: fixed;
   background-position: center;
