--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -16,7 +16,7 @@
   .header_heading {
     display: flex;
     justify-content: center;
-    color: #e44f59;
+    color: #fff;
 
     h1 {
       justify-content: center;
@@ -40,7 +40,7 @@
 
       div {
         text-align: right;
-        color: #e44f59;
+        color: #fff;
         cursor: pointer;
         padding-right: 2em;
       }
@@ -48,7 +48,7 @@
     .linkedin {
       div {
         text-align: left;
-        color: #e44f59;
+        color: #fff;
         cursor: pointer;
         padding-left: 2em;
       }
@@ -71,7 +71,7 @@
   
         div {
           text-align: right;
-          color: #e44f59;
+          color: #fff;
           cursor: pointer;
           padding-right: 3em;
         }
@@ -79,7 +79,7 @@
       .linkedin {
         div {
           text-align: left;
-          color: #e44f59;
+          color: #fff;
           cursor: pointer;
           padding-left: 3em;
         }
@@ -102,7 +102,7 @@
   
         div {
           text-align: right;
-          color: #e44f59;
+          color: #fff;
           cursor: pointer;
           padding-right: 7em;
         }
@@ -110,7 +110,7 @@
       .linkedin {
         div {
           text-align: left;
-          color: #e44f59;
+          color: #fff;
           cursor: pointer;
           padding-left: 7em;
         }
