[edit] fixing raleway

--- a/client/global/global.scss
+++ b/client/global/global.scss
@@ -1,6 +1,6 @@
 //this makes styling take up entire screen..
 @import "../../../node_modules/include-media/dist/_include-media.scss";
-@import url(http://fonts.googleapis.com/css?family=Raleway);
+@import url(https://fonts.googleapis.com/css?family=Raleway);
 
 html,
 body,
