[edit] fixing font

--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -23,7 +23,7 @@
       align-items: center;
       align-self: center;
       display: flex;
-      font-family: "Stronger", sans-serif;
+      font-family: "Stronger", "Roboto", sans-serif;
       font-size: 6em;
       text-align: center;
       flex-wrap: wrap;
