--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -56,6 +56,14 @@
   }
 }
 
+//mobile
+@media only screen and (max-width: 425px) {
+  .header_container {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 //tablets
 @media only screen and (min-width: 426px) and (max-width: 960px) {
   .header_container {
