[edit] fixing header

--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -59,8 +59,7 @@
 //mobile
 @media only screen and (max-width: 425px) {
   .header_container {
-    width: 100%;
-    height: 100%;
+    background-attachment: scroll;
   }
 }
 
