[edit] header fixing part2

--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -59,7 +59,7 @@
 //mobile
 @media only screen and (max-width: 425px) {
   .header_container {
-    background-attachment: scroll;
+    background-attachment: local;
   }
 }
 
