[edit] fixing contacts background image

--- a/client/src/components/Contact/contact.scss
+++ b/client/src/components/Contact/contact.scss
@@ -127,6 +127,9 @@
 
 //mobile
 @media only screen and (max-width: 425px) {
+  .background-header {
+    background-attachment: initial;
+  }
 }
 
 @media only screen and (max-width: 552px) {
