--- a/client/src/components/Contact/contact.scss
+++ b/client/src/components/Contact/contact.scss
@@ -127,7 +127,7 @@
 
 //mobile
 @media only screen and (max-width: 425px) {
-  .background-header {
+  .background-headers {
     background-attachment: initial;
   }
 }
