--- a/client/src/components/Contact/contact.scss
+++ b/client/src/components/Contact/contact.scss
@@ -130,6 +130,10 @@
   .background-headers {
     background-attachment: initial;
   }
+
+  .vertical-alignment-helper {
+    width: 100%;
+  }
 }
 
 @media only screen and (max-width: 552px) {
