--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -75,6 +75,7 @@
     flex-direction: row;
     justify-content: flex-start;
     overflow-x: auto;
+    overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
     scroll-snap-type: x mandatory;
     scroll-snap-align: center;
