--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -74,8 +74,8 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    overflow-x: auto;
-    overflow-y: scroll;
+    overflow-x: scroll;
+    overflow-y: hidden;
     -webkit-overflow-scrolling: touch;
     scroll-snap-type: x mandatory;
     scroll-snap-align: center;
