--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -12,6 +12,40 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 2s; /* Firefox < 16 */
+  -ms-animation: fadein 2s; /* Internet Explorer */
+  -o-animation: fadein 2s; /* Opera < 12.1 */
+  animation: fadein 2s;
+
+  @keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
 
   .header_heading {
     display: flex;
@@ -24,7 +58,7 @@
       align-self: center;
       display: flex;
       font-family: "Stronger", "Roboto", sans-serif;
-      font-size: 6em;
+      font-size: 4em;
       text-align: center;
       flex-wrap: wrap;
     }
@@ -73,9 +107,7 @@
     }
 
     .header_icons {
-  
       .github {
-  
         div {
           text-align: right;
           color: #fff;
@@ -104,9 +136,7 @@
     }
 
     .header_icons {
-  
       .github {
-  
         div {
           text-align: right;
           color: #fff;
