--- a/client/src/components/Portfolio/portfolio.scss
+++ b/client/src/components/Portfolio/portfolio.scss
@@ -14,7 +14,7 @@
       color: #2c3e50;
       font-size: 50px;
       font-family: "Roboto", sans-serif;
-      font-weight: bold;
+      font-weight: 500;
       display: flex;
       justify-content: center;
       margin-top: 0.1em;
