--- a/client/src/components/Navigation/navigation.scss
+++ b/client/src/components/Navigation/navigation.scss
@@ -64,7 +64,7 @@
 .topBotomBordersOut a:hover:after {
   opacity: 1;
   transform: translateY(0px);
-  background: #ad2525;
+  background: #2c3e50;
 }
 
 //phones
