--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -35,6 +35,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    letter-spacing: .3em;
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
 
     .githubContainer {
       display: flex;
