--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -35,9 +35,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    letter-spacing: .3em;
+    letter-spacing: .5em;
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
+    text-transform: uppercase;
 
     .githubContainer {
       display: flex;
@@ -79,10 +80,10 @@
       width:-moz-fit-content;
       align-items: center;
       align-self: center;
-      padding-right: 2.55em;
+      padding-right: 1.95em;
       padding-top: .2em;
       padding-bottom: .2em;
-      padding-left: 2.55em;
+      padding-left: 1.95em;
     }
     .linkedin {
       display: flex;
