[edit] fixing headers css

--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -3,7 +3,7 @@
 .aboutMe {
   display: flex;
   height: 100vh;
-  padding: 21px;
+  padding: 1em;
   font-family: "Montserrat";
   font-weight: bold;
   opacity: 0.95;
