--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -12,6 +12,8 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  padding-left: 4em;
+  padding-right: 4em;
 
   .header_heading {
     display: flex;
@@ -23,11 +25,28 @@
       align-items: center;
       align-self: center;
       display: flex;
-      font-family: "Stronger", "Roboto", sans-serif;
-      font-size: 4em;
+      font-family: "Montserrat", sans-serif;
+      font-size: 2.3em;
       text-align: center;
       flex-wrap: wrap;
+      font-weight: bold;
+      text-transform: uppercase;
+      border-bottom: 2px solid #fff;
+      padding-bottom: 0.4em;
     }
+  }
+
+  .header_heading2 {
+    display: flex;
+    justify-content: center;
+    color: #fff;
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 0.5em;
+    text-align: center;
+    margin-top: 1.5em;
+    line-height: 2em;
   }
 
   .header_icons {
@@ -35,10 +54,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    letter-spacing: .5em;
+    letter-spacing: 0.5em;
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
     text-transform: uppercase;
+    margin-top: 1em;
 
     .iconLinks {
       display: flex;
@@ -48,20 +68,15 @@
     .githubContainer {
       display: flex;
       justify-content: center;
-      
+      border-radius: 4px;
+
       border: 1px solid white;
       box-sizing: border-box;
       width: fit-content;
-      width:-webkit-fit-content; 
-      width:-moz-fit-content;
+      width: -webkit-fit-content;
+      width: -moz-fit-content;
       align-items: center;
       align-self: center;
-      padding-right: 3em;
-      padding-top: .2em;
-      padding-bottom: .2em;
-      padding-left: 3em;
-      margin-bottom: 1em;
-      margin-top: .5em;
     }
 
     .github {
@@ -81,14 +96,11 @@
       border: 1px solid white;
       box-sizing: border-box;
       width: fit-content;
-      width:-webkit-fit-content; 
-      width:-moz-fit-content;
+      width: -webkit-fit-content;
+      width: -moz-fit-content;
       align-items: center;
       align-self: center;
-      padding-right: 1.95em;
-      padding-top: .2em;
-      padding-bottom: .2em;
-      padding-left: 1.95em;
+      border-radius: 4px;
     }
     .linkedin {
       display: flex;
@@ -107,6 +119,22 @@
   .header_container {
     background-attachment: initial;
   }
+
+  .githubContainer {
+    padding-right: 3em;
+    padding-top: 0.8em;
+    padding-bottom: 0.8em;
+    padding-left: 3em;
+    margin-bottom: 1em;
+    margin-top: 0.5em;
+  }
+
+  .linkedinContainer {
+    padding-right: 1.98em;
+    padding-top: 0.8em;
+    padding-bottom: 0.8em;
+    padding-left: 1.98em;
+  }
 }
 
 //tablets
@@ -114,17 +142,28 @@
   .header_container {
     .header_heading {
       h1 {
-        font-size: 8em;
+        font-size: 4em;
       }
     }
 
     .header_icons {
+      display: flex;
+      flex-direction: row;
+      margin-top: 5em;
+
+      .githubContainer {
+        padding: 1em;
+      }
+
+      .linkedinContainer {
+        padding: 1em;
+      }
+
       .github {
         div {
           text-align: right;
           color: #fff;
           cursor: pointer;
-          padding-right: 3em;
         }
       }
       .linkedin {
@@ -132,7 +171,6 @@
           text-align: left;
           color: #fff;
           cursor: pointer;
-          padding-left: 3em;
         }
       }
     }
@@ -143,17 +181,27 @@
   .header_container {
     .header_heading {
       h1 {
-        font-size: 12em;
+        font-size: 6em;
       }
     }
 
     .header_icons {
+      display: flex;
+      flex-direction: row;
+
+      .githubContainer {
+        padding: 1em;
+      }
+
+      .linkedinContainer {
+        padding: 1em;
+      }
+
       .github {
         div {
           text-align: right;
           color: #fff;
           cursor: pointer;
-          padding-right: 7em;
         }
       }
       .linkedin {
@@ -161,7 +209,6 @@
           text-align: left;
           color: #fff;
           cursor: pointer;
-          padding-left: 7em;
         }
       }
     }
