--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -12,13 +12,13 @@
 
   h1 {
     text-transform: uppercase;
-    font-family: "Roboto", sans-serif;
+    font-family: "Montserrat", sans-serif, "Roboto";
     font-size: 50px;
     display: flex;
     justify-content: center;
     text-transform: uppercase;
     color: #2c3e50;
-    font-weight: 500;
+    font-weight: bold;
   }
 }
 
@@ -57,6 +57,12 @@
 
     h1 {
       margin-bottom: 0.4em;
+    }
+
+    .aboutMe-header {
+      h1 {
+        font-size: 2.3em;
+      }
     }
   }
 
