--- a/client/src/components/Portfolio/portfolio.scss
+++ b/client/src/components/Portfolio/portfolio.scss
@@ -13,8 +13,8 @@
       padding-top: 12px;
       color: #2c3e50;
       font-size: 50px;
-      font-family: "Roboto", sans-serif;
-      font-weight: 500;
+      font-family: "Montserrat", sans-serif, "Roboto";
+      font-weight: bold;
       display: flex;
       justify-content: center;
       margin-top: 0.1em;
@@ -32,7 +32,6 @@
     text-align: center;
     box-shadow: 1px 1px 2px #e6e6e6;
     cursor: default;
-    width: 13em;
   }
 
   .view .mask,
@@ -52,7 +51,7 @@
   .view img {
     display: block;
     position: relative;
-    height: 12em;
+    height: 15em;
     width: auto;
   }
 
@@ -147,6 +146,13 @@
 
 //phones
 @media only screen and (max-width: 425px) {
+  .portfolio-container {
+    .portfolio-header {
+      h1 {
+        font-size: 2.3em;
+      }
+    }
+  }
   .portfolio-grid {
     flex-direction: column;
 
