--- a/client/src/components/Skills/skills.scss
+++ b/client/src/components/Skills/skills.scss
@@ -32,8 +32,8 @@
     padding-bottom: 22.5px;
     padding-top: 12px;
     font-size: 50px;
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
+    font-family: "Montserrat", sans-serif, "Roboto";
+    font-weight: bold;
     display: flex;
     justify-content: center;
     color: #fff;
@@ -85,6 +85,11 @@
 
 //phones
 @media only screen and (max-width: 425px) {
+  .headerSkills {
+    h1 {
+      font-size: 2.3em;
+    }
+  }
 }
 
 //tablets
