--- a/client/src/components/Contact/contact.scss
+++ b/client/src/components/Contact/contact.scss
@@ -46,7 +46,8 @@
     font-weight: bold;
     line-height: 1.5em;
     text-align: center;
-    margin-bottom: 1em;
+    border: 1px solid black;
+    border-radius: 4px;
 
     .icon {
       text-align: center;
@@ -137,11 +138,11 @@
 
   .information {
     padding: 1em;
-  }
 
-  .contact-info {
-    border: 1px solid black;
-    border-radius: 4px;
+    .contact-info {
+      margin-bottom: 1em;
+      padding-top: .2em;
+    }
   }
 }
 
@@ -158,6 +159,8 @@
   .information {
     display: grid;
     grid-template-columns: auto auto auto;
+    padding-left: 1em;
+    padding-right: 1em;
   }
 }
 
@@ -168,5 +171,7 @@
     grid-template-columns: auto auto auto;
     padding-bottom: 1em;
     padding-top: 1em;
+    padding-left: 1em;
+    padding-right: 1em;
   }
 }
