--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -15,6 +15,10 @@
   padding-left: 4em;
   padding-right: 4em;
 
+  a {
+    color: #fff;
+  }
+
   .header_heading {
     display: flex;
     justify-content: center;
